crates/vize_patina/src/linter/tests/snapshots/vize_patina__linter__tests__directives__vize_fixme_emits_error.snap
---
source: crates/vize_patina/src/linter/tests/directives.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "vize/fixme",
        severity: Error,
        message: "FIXME: broken",
        start: 5,
        end: 32,
        help: None,
        labels: [],
        fix: None,
    },
]
