crates/vize_patina/src/linter/tests/snapshots/vize_patina__linter__tests__directives__vize_todo_emits_warning.snap
---
source: crates/vize_patina/src/linter/tests/directives.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "vize/todo",
        severity: Warning,
        message: "TODO: fix this",
        start: 5,
        end: 33,
        help: None,
        labels: [],
        fix: None,
    },
]
